...
import com.github.jtaylorsoftware.quizapp.ui.isInProgress

/**
 * Presents a screen for the user to input their credentials for a new account.
 *
 * @param usernameState State containing the input username and state.
 * @param onUsernameChanged Callback invoked when the user inputs text to the "Username" field.
 * @param passwordState State containing the input password and state.
 * @param onPasswordChanged Callback invoked when the user inputs text to the "Password" field.
 * @param register Callback invoked when the user presses the "Sign Up" button. Primary action on the screen.
 * @param navigateToLogin Callback invoked when the user presses the "Sign In" text. Secondary action on the screen.
 */
@Composable
fun SignupScreen(
    uiState: SignupUiState,
    onUsernameChanged: (String) -> Unit,
    onPasswordChanged: (String) -> Unit,
...
    val isInProgress = remember(uiState) { uiState.registerStatus.isInProgress }
    val signUpButtonTextAlpha by derivedStateOf { if (isInProgress) 0.0f else 1.0f }

    var confirmPasswordState by remember { mutableStateOf(TextFieldState()) }
    val onConfirmPasswordChanged = { confirmPassword: String ->
        val error = if (confirmPassword != uiState.passwordState.text) {
            "Passwords do not match."
        } else null
        confirmPasswordState = TextFieldState(text = confirmPassword, error = error, dirty = true)
    }

    Column {
        UsernameField(state = uiState.usernameState, onValueChange = onUsernameChanged, hint = "Username")
        EmailField(state = uiState.emailState, onValueChange = onEmailChanged, hint = "Email")
        PasswordField(state = uiState.passwordState, onValueChange = onPasswordChanged, hint = "Password")
        PasswordField(
            state = confirmPasswordState,
            onValueChange = onConfirmPasswordChanged,
            fieldContentDescription = "Confirm password",
            hint = "Confirm password hint",
            hintContentDescription = "Confirm password hint",
        )

        ButtonWithProgress(
            onClick = register,
...
                )
            }
        ) {
            Text("Sign Up", modifier = Modifier.alpha(signUpButtonTextAlpha))
        }
        Row {
            Text("Already registered?")
            Text(
                "Sign In",
                color = MaterialTheme.colors.secondary,
                modifier = Modifier
                    .clickable { navigateToLogin() }
                    .padding(horizontal = 2.dp)
...
